Fixed margin spacing on Event page buttons

--- a/prepme/src/react-components/Event/styles.css
+++ b/prepme/src/react-components/Event/styles.css
@@ -61,7 +61,7 @@
   }
 
   .last_button {
-    margin-bottom: 8px;
+    margin-right: 8px;
   }
 
   #avatar-list {
